# haskell

./: .gitignore  README.md  clojure.clj  h.hs  haskell.hs  learn.hs  rwh.hs  scala.scala  scheme.scm
files/: caps-imp.hs  output.txt  ren-del.hs
json/: MainJSON.hs  Prettify.hs  PrettyJSON.hs  PutJSON.hs  Setup.hs  SimpleJSON.hs  prettymyjson.cabal
